# tebis

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PLAN-KOKORO-LOCAL-FULL.md  PLAN-KOKORO-TTS.md  PLAN-TTS-REFACTOR.md  PLAN-TTS-V2.md  PLAN-VOICE.md  PLAN-WINDOWS.md  PLAN.md  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml
contrib/claude/: claude-hook.ps1  claude-hook.sh  claude-settings.example.json
contrib/copilot/: copilot-hook.ps1  copilot-hook.sh
contrib/linux/: install.sh  tebis-container.conf  tebis.service  uninstall.sh
contrib/macos/: install.sh  local.tebis.plist  uninstall.sh
crates/tebis-tts-kokoro/: Cargo.toml
crates/tebis-tts-kokoro/src/: e2m.rs  lib.rs  normalize.rs  phonemize.rs  session.rs  tokens.rs  voices.rs
docs/: configuration.md  dashboard.md  hooks.md  install.md  setup.md  voice.md
e2e/: audio-smoke.rs  debug-setup.exp  inspect-demo.rs  kokoro-smoke.rs  mux-smoke.rs  tts-bench.rs
examples/: audio-smoke.rs  inspect-demo.rs  kokoro-smoke.rs  tts-bench.rs
scripts/: debug-setup.exp  install.ps1  install.sh  pin-model-shas.sh
src/: bridge.rs  config.rs  env_file.rs  fsutil.rs  handler.rs  hooks_cli.rs  lib.rs  lockfile.rs  main.rs  metrics.rs  preflight.rs  sanitize.rs  security.rs  service.rs  session.rs  setup.rs  shutdown.rs  telegram.rs  tmux.rs  types.rs  uninstall.rs  upgrade.rs
src/agent_hooks/: agent.rs  claude.rs  copilot.rs  jsonfile.rs  legacy.rs  manifest.rs  mod.rs  script_e2e_tests.rs  test_support.rs
src/audio/: cache.rs  codec.rs  espeak.rs  fetch.rs  manifest.json  manifest.rs  mod.rs  progress.rs
src/audio/stt/: local.rs  mod.rs
src/audio/tts/: kokoro.rs  mod.rs  remote.rs  say.rs  wav.rs  winrt.rs
src/audio/tts/kokoro/: mod.rs  normalize.rs  phonemize.rs  voices.rs
src/bridge/: autoreply.rs  handler.rs  mod.rs  session.rs  tts_validation.rs  typing.rs  voice_pref.rs
src/inspect/: mod.rs  render.rs  server.rs
src/inspect/render/: css.rs  mod.rs  rows.rs  sessions_table.rs  settings.rs  timefmt.rs
src/notify/: format.rs  listener.rs  markdown.rs  mod.rs
src/platform/: binary_replace.rs  hostname.rs  mod.rs  multiplexer.rs  paths.rs  process.rs  secure_file.rs  signal.rs  tts_support.rs  windows_auth.rs
src/platform/peer_listener/: mod.rs  unix.rs  windows.rs
src/service/: mod.rs  unix.rs  windows.rs
src/setup/: discover.rs  hook_deps.rs  installer.rs  mod.rs  mux_prereq.rs  onnxruntime.rs  phonemizer.rs  steps.rs  ui.rs
src/setup/steps/: autostart.rs  bot_token.rs  hooks.rs  inspect.rs  mod.rs  sessions.rs  tts.rs  user_id.rs  voice.rs
src/telegram/: mod.rs  types.rs
