# Root workspace. `tebis` (the daemon) is the root package;
# `crates/tebis-tts-kokoro/` is an optional separate crate so dropping
# Kokoro is a one-line change here.
[workspace]
members = [".", "crates/tebis-tts-kokoro"]

[package]
description = "Telegram-tmux bridge for driving AI coding agents from a phone"
edition = "2024"
license = "MIT"
name = "tebis"
publish = false
rust-version = "1.95"
version = "0.1.1"

[dependencies]
anyhow = "1"
bytes = "1"
console = "0.16.3"
dialoguer = {version = "0.12", default-features = false}
http-body-util = "0.1.3"
hyper = {version = "1.9.0", default-features = false, features = ["client", "http1", "server"]}
hyper-rustls = {version = "0.27.9", default-features = false, features = ["ring", "http1", "webpki-tokio", "tls12"]}
hyper-util = {version = "0.1.20", default-features = false, features = ["client", "client-legacy", "http1", "tokio"]}
libc = "0.2.185"
# Already transitive via hyper-rustls/rustls — made direct so
# `ring::digest::SHA256` is usable without relying on re-exports.
ring = "0.17"
rustls = {version = "0.23.38", default-features = false, features = ["ring", "std", "tls12", "logging"]}
secrecy = "0.10.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.18"
tokio = {version = "1.52.1", features = ["rt-multi-thread", "macros", "signal", "process", "time", "sync", "net", "io-util"]}
tokio-util = {version = "0.7.18", features = ["rt"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["fmt", "env-filter"]}
ogg = "0.9"
opus = "0.3"

# whisper-rs: Metal GPU on macOS, CPU on Linux.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = {version = "0.16", default-features = false, features = ["metal"]}

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = {version = "0.16", default-features = false}

[features]
default = []
kokoro = ["dep:tebis-tts-kokoro"]

[dependencies.tebis-tts-kokoro]
optional = true
path = "crates/tebis-tts-kokoro"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
# A silently-wrapping integer in a network service is worse than a
# controlled panic that systemd restarts. CVE-2018-1000810.
overflow-checks = true
