# Root workspace. `tebis` (the daemon) is the root package;
# `crates/tebis-tts-kokoro/` is an optional separate crate. Dropping
# Kokoro touches three entries in this file (feature list, dep block,
# workspace member) plus the adapter at `src/audio/tts/kokoro.rs`, and
# nothing else — the crate is otherwise fully isolated.
[workspace]
members = [".", "crates/tebis-tts-kokoro"]

[package]
description = "Telegram-to-multiplexer bridge for driving AI coding agents from a phone"
edition = "2024"
license = "MIT"
name = "tebis"
publish = false
rust-version = "1.95"
version = "0.1.1"

[dependencies]
anyhow = "1"
bytes = "1"
console = "0.16.3"
dialoguer = {version = "0.12", default-features = false}
http-body-util = "0.1.3"
indicatif = "0.18"
hyper = {version = "1.9.0", default-features = false, features = ["client", "http1", "server"]}
hyper-rustls = {version = "0.27.9", default-features = false, features = ["ring", "http1", "webpki-roots", "tls12"]}
hyper-util = {version = "0.1.20", default-features = false, features = ["client", "client-legacy", "http1", "tokio"]}
# Known Folders on Windows, XDG on Linux, Apple dirs on macOS behind one
# API — config/data/cache/runtime paths stop being hand-rolled.
directories = "6"
# Already transitive via hyper-rustls/rustls — made direct so
# `ring::digest::SHA256` is usable without relying on re-exports.
ring = "0.17"
rustls = {version = "0.23.38", default-features = false, features = ["ring", "std", "tls12", "logging"]}
secrecy = "0.10.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.18"
tokio = {version = "1.52.1", features = ["rt-multi-thread", "macros", "signal", "process", "time", "sync", "net", "io-util"]}
tokio-util = {version = "0.7.18", features = ["rt"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["fmt", "env-filter"]}
ogg = "0.9"
opus = "0.3"

# libc only reachable through Unix-gated code paths (lockfile flock,
# notify UDS umask/peer_cred, service launchd/systemd, inspect SIGTERM);
# keeping it off the Windows build simplifies the dep graph there.
[target.'cfg(unix)'.dependencies]
libc = "0.2.185"

# Win32 bindings for the Windows-side primitives: named-pipe DACLs,
# ImpersonateNamedPipeClient + TokenUser SID check (notify peer auth,
# invariant 20), process termination via TerminateProcess, etc. The
# feature set is the minimum needed by each platform::windows backend
# — we extend it per subsystem as phases land.
#
# WinRT blocks (`Foundation`, `Media_SpeechSynthesis`, `Storage_Streams`)
# enable the built-in Windows TTS backend — zero-install OneCore voices
# via `Windows.Media.SpeechSynthesis.SpeechSynthesizer`. Gated behind
# `cfg(windows)` because WinRT types don't exist on other OSes.
[target.'cfg(windows)'.dependencies]
windows = {version = "0.62", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Core",
    "Media_SpeechSynthesis",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_WinRT",
]}
windows-future = "0.3"

# whisper-rs: Metal GPU on macOS, CPU on Linux + Windows. CUDA/Vulkan
# on Windows could land later behind a feature flag; CPU is the
# least-surprising default for a personal daemon on a single-user
# desktop (whisper-base.en is ~150 MB and transcribes a minute of
# speech in a couple of seconds on modern hardware).
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = {version = "0.16", default-features = false, features = ["metal"]}

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = {version = "0.16", default-features = false}

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = {version = "0.16", default-features = false}

[dependencies.tebis-tts-kokoro]
optional = true
path = "crates/tebis-tts-kokoro"

[features]
default = []
kokoro-local = ["dep:tebis-tts-kokoro"]

[[example]]
name = "audio-smoke"
path = "e2e/audio-smoke.rs"

[[example]]
name = "inspect-demo"
path = "e2e/inspect-demo.rs"

[[example]]
name = "kokoro-smoke"
path = "e2e/kokoro-smoke.rs"
required-features = ["kokoro-local"]

[[example]]
name = "tts-bench"
path = "e2e/tts-bench.rs"

[[example]]
name = "mux-smoke"
path = "e2e/mux-smoke.rs"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
# A silently-wrapping integer in a network service is worse than a
# controlled panic that systemd restarts. CVE-2018-1000810.
overflow-checks = true
